--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Updated with guest chat support
+# nginx/nginx.conf - Enhanced with hardcoded guest tokens
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -6,6 +6,7 @@ pid /var/run/nginx.pid;
 env JWT_SECRET;
 env REDIS_HOST;
 env REDIS_PORT;
+env ADMIN_USERNAME;
 
 events {
     worker_connections 1024;
@@ -22,6 +23,9 @@ http {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     resolver 127.0.0.11 ipv6=off;
     lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
+    
+    # Shared memory for guest sessions (no Redis dependency)
+    lua_shared_dict guest_sessions 10m;
 
     server {
         listen 80;
@@ -152,7 +156,7 @@ http {
             }
         }
 
-        # CHAT API ROUTES - Use unified auth (supports both users and guests)
+        # CHAT API ROUTES - Use unified auth with new logic
         location = /api/chat/stream {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
@@ -170,23 +174,26 @@ http {
             
             access_by_lua_block {
                 local unified_auth = require "unified_auth"
-                local user_type, username, error_msg = unified_auth.check_user_access()
+                local user_type, username, slot_num = unified_auth.check_user_access()
                 
                 if not user_type then
                     ngx.status = 401
                     ngx.header.content_type = 'application/json'
-                    ngx.say('{"error": "Authentication required", "message": "' .. (error_msg or "No valid session") .. '"}')
+                    ngx.say('{"error": "Authentication required", "message": "No valid session"}')
                     ngx.exit(401)
                 end
                 
                 -- Store user info for use in content phase
                 ngx.var.auth_user_type = user_type
                 ngx.var.auth_username = username
+                if slot_num then
+                    ngx.var.auth_slot_num = tostring(slot_num)
+                end
             }
             
             lua_need_request_body on;
             content_by_lua_block {
-                local chat_api = require "chat_api"
+                local chat_api = require "chat_api_enhanced"
                 chat_api.handle_chat_stream()
             }
         }
@@ -205,28 +212,31 @@ http {
             
             access_by_lua_block {
                 local unified_auth = require "unified_auth"
-                local user_type, username, error_msg = unified_auth.check_user_access()
+                local user_type, username, slot_num = unified_auth.check_user_access()
                 
                 if not user_type then
                     ngx.status = 401
                     ngx.header.content_type = 'application/json'
-                    ngx.say('{"error": "Authentication required", "message": "' .. (error_msg or "No valid session") .. '"}')
+                    ngx.say('{"error": "Authentication required", "message": "No valid session"}')
                     ngx.exit(401)
                 end
                 
                 -- Store user info for use in content phase
                 ngx.var.auth_user_type = user_type
                 ngx.var.auth_username = username
+                if slot_num then
+                    ngx.var.auth_slot_num = tostring(slot_num)
+                end
             }
             
             lua_need_request_body on;
             content_by_lua_block {
-                local chat_api = require "chat_api"
+                local chat_api = require "chat_api_enhanced"
                 chat_api.handle_chat_api()
             }
         }
 
-        # ADMIN API ROUTES - Use clean admin check
+        # ADMIN API ROUTES - Admin access only
         location ~ ^/api/admin/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS';
@@ -240,8 +250,17 @@ http {
             }
             
             access_by_lua_block {
-                local auth = require "auth"
-                auth.check_admin_user()
+                local unified_auth = require "unified_auth"
+                local is_admin, username = unified_auth.check_admin_access()
+                
+                if not is_admin then
+                    ngx.status = 403
+                    ngx.header.content_type = 'application/json'
+                    ngx.say('{"error": "Admin access required"}')
+                    ngx.exit(403)
+                end
+                
+                ngx.var.auth_username = username
             }
             
             lua_need_request_body on;
@@ -249,7 +268,7 @@ http {
                 local uri = ngx.var.uri
                 
                 if string.match(uri, "^/api/admin/sessions") then
-                    local admin_session_api = require "admin_session_api"
+                    local admin_session_api = require "admin_session_api_enhanced"
                     admin_session_api.handle_session_api()
                 else
                     local admin_api = require "admin_api"
@@ -258,7 +277,7 @@ http {
             }
         }
 
-        # USER API ROUTES - Use approved user check
+        # USER API ROUTES - Approved users only
         location ~ ^/api/user/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
@@ -272,8 +291,17 @@ http {
             }
             
             access_by_lua_block {
-                local auth = require "auth"
-                auth.check_approved_user()
+                local unified_auth = require "unified_auth"
+                local is_approved, username = unified_auth.check_approved_user()
+                
+                if not is_approved then
+                    ngx.status = 403
+                    ngx.header.content_type = 'application/json'
+                    ngx.say('{"error": "User access required"}')
+                    ngx.exit(403)
+                end
+                
+                ngx.var.auth_username = username
             }
             
             lua_need_request_body on;
@@ -296,42 +324,61 @@ http {
             try_files /register.html =404;
         }
 
-        # CHAT PAGE - Use updated chat module with guest support
+        # CHAT PAGE - Use updated chat module with enhanced guest support
         location = /chat.html {
             content_by_lua_block {
-                local chat = require "chat"
+                local chat = require "chat_enhanced"
                 chat.handle_chat()
             }
         }
 
-        # ADMIN PAGE - Use existing module
+        # ADMIN PAGE - Admin access required
         location = /admin.html {
+            access_by_lua_block {
+                local unified_auth = require "unified_auth"
+                local is_admin, username = unified_auth.check_admin_access()
+                
+                if not is_admin then
+                    return ngx.redirect("/login.html?redirect=" .. ngx.escape_uri("/admin.html"))
+                end
+                
+                ngx.var.auth_username = username
+            }
+            
             content_by_lua_block {
                 local admin = require "admin"
                 admin.handle_admin()
             }
         }
 
-        # USER DASHBOARD - Add auth check and template rendering
+        # USER DASHBOARD - Approved user access required
         location = /dashboard.html {
-            content_by_lua_block {
-                local auth = require "auth"
-                local username, red = auth.check_approved_user()
+            access_by_lua_block {
+                local unified_auth = require "unified_auth"
+                local is_approved, username = unified_auth.check_approved_user()
                 
+                if not is_approved then
+                    return ngx.redirect("/login.html?redirect=" .. ngx.escape_uri("/dashboard.html"))
+                end
+                
+                ngx.var.auth_username = username
+            }
+            
+            content_by_lua_block {
                 -- Load navigation template
                 local nav_html = ""
                 local nav_file = io.open("/usr/local/openresty/nginx/html/nav.html", "r")
                 if nav_file then
                     nav_html = nav_file:read("*a")
                     nav_file:close()
-                    nav_html = nav_html:gsub("{{username}}", username)
+                    nav_html = nav_html:gsub("{{username}}", ngx.var.auth_username)
                     nav_html = nav_html:gsub("{{admin_link}}", "")
                 end
                 
                 local template = require "template"
                 template.render_template("/usr/local/openresty/nginx/html/dashboard.html", {
                     navigation = nav_html,
-                    username = username
+                    username = ngx.var.auth_username
                 })
             }
         }
