--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -193,7 +193,7 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                local chat_api = require "chat_api_enhanced"
+                local chat_api = require "chat_api"
                 chat_api.handle_chat_stream()
             }
         }
@@ -231,7 +231,7 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                local chat_api = require "chat_api_enhanced"
+                local chat_api = require "chat_api"
                 chat_api.handle_chat_api()
             }
         }
@@ -268,7 +268,7 @@ http {
                 local uri = ngx.var.uri
                 
                 if string.match(uri, "^/api/admin/sessions") then
-                    local admin_session_api = require "admin_session_api_enhanced"
+                    local admin_session_api = require "admin_session_api"
                     admin_session_api.handle_session_api()
                 else
                     local admin_api = require "admin_api"
@@ -327,7 +327,7 @@ http {
         # CHAT PAGE - Use updated chat module with enhanced guest support
         location = /chat.html {
             content_by_lua_block {
-                local chat = require "chat_enhanced"
+                local chat = require "chat"
                 chat.handle_chat()
             }
         }
