--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,11 @@ http {
     server {
         listen 80;
         server_name localhost;
+        
+        # Declare nginx variables for Lua use
+        set $auth_user_type '';
+        set $auth_username '';
+        set $auth_slot_num '';
 
         # STATIC ASSETS - No auth required
         location /js/ {
