User accounts (admin/approved) are stored in Redis Max 5 SSE sessions total across the entire server Priority system: Admin > Approved > Guest (admins can't be kicked) One session per user (including guests) Chat history: Redis for admin/approved, localStorage for guests

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ ADMIN_USER_ID=admin
 # =============================================================================
 # 🤖 MODEL CONFIGURATION
 # =============================================================================
-OLLAMA_MODEL=devstral
+OLLAMA_MODEL=devstral:24b
 MODEL_DISPLAY_NAME=Devstral Small 2505
 MODEL_DESCRIPTION=Advanced coding and reasoning model optimized for hybrid GPU+CPU processing
 
