--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Simple architecture with 7 Lua files
+# nginx/nginx.conf - Enhanced security with proper dashboard routing
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -131,7 +131,7 @@ http {
             }
         }
 
-        # CHAT API - is_who determines user type and routes accordingly
+        # CHAT API - Enhanced security with explicit pending user block
         location ~ ^/api/chat/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -152,7 +152,15 @@ http {
                 local is_who = require "is_who"
                 local user_type, username = is_who.set_vars()
                 
-                if user_type == "admin" or user_type == "approved" then
+                -- PENDING USER BLOCK - Check if authenticated but not approved
+                if user_type ~= "none" and user_type ~= "guest" and ngx.var.is_approved ~= "true" then
+                    ngx.status = 403
+                    ngx.header.content_type = 'application/json'
+                    ngx.say('{"error": "Account pending approval - chat access denied", "is_approved": false, "redirect": "/pending_dash.html"}')
+                    ngx.exit(403)
+                end
+                
+                if ngx.var.is_approved == "true" then
                     -- Admin/approved users use Redis storage
                     local is_approved = require "is_approved"
                     is_approved.handle_chat_api()
@@ -212,13 +220,13 @@ http {
             try_files /register.html =404;
         }
 
-        # CHAT PAGE - is_who determines interface
+        # CHAT PAGE - Enhanced routing with is_approved check
         location = /chat.html {
             content_by_lua_block {
                 local is_who = require "is_who"
                 local user_type, username = is_who.set_vars()
                 
-                if user_type == "admin" or user_type == "approved" then
+                if ngx.var.is_approved == "true" then
                     -- Admin/approved users get full chat with Redis
                     local is_approved = require "is_approved"
                     is_approved.handle_chat_page()
@@ -226,9 +234,9 @@ http {
                     -- Guest users get chat with localStorage
                     local is_guest = require "is_guest"
                     is_guest.handle_guest_chat_page()
-                elseif user_type == "pending" then
-                    -- Pending users get redirected to waiting page
-                    return ngx.redirect("/pending.html")
+                elseif user_type ~= "none" and ngx.var.is_approved ~= "true" then
+                    -- Authenticated but not approved = pending user
+                    return ngx.redirect("/pending_dash.html")
                 else
                     -- No session - show guest options
                     local is_guest = require "is_guest"
@@ -237,30 +245,68 @@ http {
             }
         }
 
-        # ADMIN PAGE - Admin only
-        location = /admin.html {
+        # ADMIN DASHBOARD - Admin only
+        location = /admin_dash.html {
             content_by_lua_block {
                 local is_admin = require "is_admin"
                 is_admin.handle_admin_page()
             }
         }
 
-        # DASHBOARD PAGE - Approved users only
-        location = /dashboard.html {
+        # LEGACY ADMIN PAGE - Redirect to new dashboard
+        location = /admin.html {
             content_by_lua_block {
+                return ngx.redirect("/admin_dash.html")
+            }
+        }
+
+        # USER DASHBOARD - Approved users only (is_approved = true)
+        location = /user_dash.html {
+            content_by_lua_block {
+                local is_who = require "is_who"
+                local user_type, username = is_who.set_vars()
+                
+                -- Security check: Only approved users can access
+                if ngx.var.is_approved ~= "true" then
+                    if ngx.var.is_admin == "true" then
+                        return ngx.redirect("/admin_dash.html")
+                    elseif user_type ~= "none" and user_type ~= "guest" then
+                        -- Authenticated but not approved = pending
+                        return ngx.redirect("/pending_dash.html")
+                    else
+                        return ngx.redirect("/")
+                    end
+                end
+                
                 local is_approved = require "is_approved"
                 is_approved.handle_dashboard_page()
             }
         }
 
-        # PENDING PAGE - For users awaiting approval
-        location = /pending.html {
+        # LEGACY DASHBOARD PAGE - Redirect to new dashboard
+        location = /dashboard.html {
+            content_by_lua_block {
+                return ngx.redirect("/user_dash.html")
+            }
+        }
+
+        # PENDING DASHBOARD - Authenticated but not approved users only
+        location = /pending_dash.html {
             content_by_lua_block {
                 local is_who = require "is_who"
                 local user_type, username = is_who.set_vars()
                 
-                if user_type == "pending" then
-                    local nav_html = string.format([[
+                -- Security check: Only pending users (authenticated but not approved) can access
+                if user_type == "none" or user_type == "guest" then
+                    return ngx.redirect("/")
+                elseif ngx.var.is_admin == "true" then
+                    return ngx.redirect("/admin_dash.html")
+                elseif ngx.var.is_approved == "true" then
+                    return ngx.redirect("/user_dash.html")
+                end
+                
+                -- At this point: authenticated but not approved = pending user
+                local nav_html = string.format([[
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/"><i class="bi bi-lightning-charge-fill"></i> ai.junder.uk</a>
@@ -272,14 +318,19 @@ http {
 </nav>
 ]], username)
 
-                    local template = require "template"
-                    template.render_template("/usr/local/openresty/nginx/html/pending.html", {
-                        navigation = nav_html,
-                        username = username
-                    })
-                else
-                    return ngx.redirect("/")
-                end
+                local template = require "template"
+                template.render_template("/usr/local/openresty/nginx/html/pending_dash.html", {
+                    navigation = nav_html,
+                    username = username,
+                    is_approved = "false"
+                })
+            }
+        }
+
+        # LEGACY PENDING PAGE - Redirect to new dashboard
+        location = /pending.html {
+            content_by_lua_block {
+                return ngx.redirect("/pending_dash.html")
             }
         }
 
